Simple fix.. behaves weird

Bug: 774449
Change-Id: Iad68894dfbfa6954fe8af2ac0af2a3e5657c2c7d